syntax = "proto3";

message NetworkError {
  Code   code      = 1; // Error code
  string message   = 2; // Optional: Message

  enum Code {
    UNKNOWN = 0; // Unknown

    // 400
    BAD_REQUEST = 400; // Bad request
  }
}
