syntax = "proto3";

message Token {
  string accessToken = 1;
}

// GET - Response
message GetTokenResponse {
  Token token = 1;
}

// POST - Request
message PostTokenRequest {
  string accessToken = 1;
}

// POST - Response
message PostTokenResponse {
  Token token = 1;
}
